Fix alignment of settings icon.

--- a/src/stylesheets/commentingSettingsLink.scss
+++ b/src/stylesheets/commentingSettingsLink.scss
@@ -11,8 +11,7 @@
 	}
 
 	.o-comment-ui--settings-icon {
-		@include oIconsGetIcon('settings', oColorsGetPaletteColor('oxford'), 14, $iconset-version: 1);
-
-		margin-top: -2px;
+		@include oIconsGetIcon('settings', oColorsGetPaletteColor('oxford'), 25, $iconset-version: 1);
+		vertical-align: bottom;
 	}
 }
